# AI-Practice-Collection

./: readme.md
Blackjack/非AI对战版/: README.md  main.py
Gazebo_CV/: README.md  教程.md
Gazebo_CV/workspace/: Makefile  world.sdf  world_level2.sdf
Gazebo_CV/workspace/src/ros2_21_tutorials/learning_node/learning_node/: node_helloworld.py
SocailMood/: README.MD  run.py
SocailMood/docs/: index.html
SocailMood/src/: _dataclean.py  _model.py  _pyechart.py
SocialMood/: requirements.txt  setup.py
SocialMood/src/: _database.py
XiaoAI_Agent/: README.md  _mihome.py  chat.py  config.py  main.py  requirements.txt
XiaoAI_Agent/miservice/: cli.py  miaccount.py
check_rubbish/backend/: .gitignore  README.md  classifier.py  dependencies.py  main.py  models.py  pyproject.toml  send_email.py  test.ipynb  utils.py  verification_codes.db  测试数据.docx
check_rubbish/backend/chroma_langchain_db/: chroma.sqlite3
check_rubbish/frontend/: cert.pem  index.html  key.pem  package-lock.json  package.json  vite.config.js
check_rubbish/frontend/src/: App.vue  main.js
check_rubbish/frontend/src/views/: Classification.vue  Login.vue
file_ask/: .env  QUICKSTART_DOCUMENT_QA.md  README.md  README_DOCUMENT_QA.md  document_qa.py  llm.py  pyproject.toml
file_ask/example_data/: README.md
gemini-fullstack-langgraph-quickstart/backend/: pyproject.toml
generate_cards/: README.md  batch_generate_cards.py  genstudio_client.py  main.py  pyproject.toml  words.txt
knn_network/: main.py  pyproject.toml  requirements.txt  使用说明.md
learn-english-from-famous-project/: README.md  input.txt  main.py  pyproject.toml  requirements.txt  response.txt
learn-english-from-famous-project/app/: main.py
learn-english-from-famous-project/app/services/: processing.py  translation.py  utils.py
learn-english-from-famous-project/data/results/: nanobot_ast.jsonl  nanobot_translate.csv  nanobot_translate.jsonl  nanobot_translate.txt  nanobot_words.jsonl
learn-english-from-famous-project/templates/: index.html
