[project]
name = "ollama-ask-demo"
version = "0.1.0"
description = "AI 智能问答助手 - 基于本地文档的RAG问答系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.0.0",
    "langchain>=1.0.5",
    "langchain-community>=1.0.5",
    "langchain-ollama>=0.3.0",
    "langchain-core>=1.0.5",
    "ollama>=0.6.0",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.0",
]
