[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.5",
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "milvus-lite>=2.5.1",
    "pip>=25.3",
    "pymilvus>=2.6.5",
]
